decctools 0.2.1 (xx xx xx)
---------------

* Update the URL for the LAD data which has changed once again


decctools 0.2.0 (4 August 2014)
---------------

* Added support for accessing all years of LAD, LSOA, and MSOA data

* Added support for accessing all fuel types in LAD data, not just
  electricity and gas

* Updated metadata to use new 2011 ONS codes for local authorities,
  census populations, and area classifications

* Added a simple `is_urban` function to classify local authorities
  based on their ONS code and a user-specified definition of urban

* Simplified API with a consistent interface across all geographies

decctools 0.1.6
---------------

* Improved use of RCurl in response to CRAN comments

decctools 0.1.5
---------------

* Updated get_LAD_data URL

* Added error trapping for fetching of remote files

decctools 0.1.4
---------------

* Fixed get_last_date to cope with new REF website design

decctools 0.1.3
---------------

* Disabled curl's validation of SSL certificate to pass CRAN (Windows)
  checks.  Not ideal but I can't reproduce the problem on my Windows
  machine.

* Converted Depends statements to Imports

decctools 0.1.2
---------------

* updated URL for LAD data

decctools 0.1.1
---------------

* fixed bug with file download routines

decctools 0.1.0
---------------

* initial release

* provides methods for accessing UK Dept of Energy and Climate Change
  statistics on energy consumption at local authority district, MSOA,
  and LSOA level.

* provides methods for accessing grid fuel mix and carbon intensity of
  electricity using Elexon's BM Reports data, as archived by the
  charity Renewable Energy Foundation