@@ -1,7 +1,9 @@
 decctools 0.2.1 (xx xx xx)
 ---------------
 
-* Update the URL for the LAD data which has changed once again
+* Updated the URL for the LAD data which has changed once again
+
+* Updated the URL for the LAD names and codes file
 
 
 decctools 0.2.0 (4 August 2014)
